# ucd-generate

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: script.sh
src/: app.rs  bidi_class.rs  bidi_mirroring_glyph.rs  case_folding.rs  case_mapping.rs  general_category.rs  joining_type.rs  main.rs  property_bool.rs  writer.rs
ucd-parse/: Cargo.toml  README.md
ucd-parse/src/: arabic_shaping.rs  bidi_mirroring_glyph.rs  lib.rs
