[package]
name = "yeslogic-ucd-generate"
version = "0.2.3"  #:version
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
description = """
A program for generating packed representations of the Unicode character
database that can be efficiently searched with support for additional tables.
"""
documentation = "https://github.com/yeslogic/ucd-generate"
homepage = "https://github.com/yeslogic/ucd-generate"
repository = "https://github.com/yeslogic/ucd-generate"
readme = "README.md"
keywords = ["unicode", "generate", "character", "table", "fst"]
license = "MIT/Apache-2.0"
categories = ["text-processing", "internationalization"]

[badges]
travis-ci = { repository = "yeslogic/ucd-generate" }

[workspace]
members = ["ucd-parse", "ucd-trie", "ucd-util"]

[dependencies]
byteorder = "1"
fst = { version = "0.3", default-features = false }
regex-automata = "0.1.3"
ucd-parse = { version = "0.1.5", path = "ucd-parse", package = "yeslogic-ucd-parse" }
ucd-trie = { version = "0.1.2", path = "ucd-trie" }
ucd-util = { version = "0.1.4", path = "ucd-util"  }

[dependencies.clap]
version = "2"
default-features = false
features = ["suggestions", "color"]

[dev-dependencies]
lazy_static = "1"

[profile.release]
debug = true
