[package]
name = "yeslogic-ucd-generate"
version = "0.6.0"  #:version
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
description = """
A program for generating packed representations of the Unicode character
database that can be efficiently searched with support for additional tables.
"""
documentation = "https://github.com/yeslogic/ucd-generate"
homepage = "https://github.com/yeslogic/ucd-generate"
repository = "https://github.com/yeslogic/ucd-generate"
readme = "README.md"
keywords = ["unicode", "generate", "character", "table", "fst"]
license = "MIT OR Apache-2.0"
categories = ["text-processing", "internationalization"]
edition = "2018"

[workspace]
members = ["ucd-parse", "ucd-trie", "ucd-util"]

[[bin]]
bench = false
path = "src/main.rs"
name = "yeslogic-ucd-generate"

[dependencies]
byteorder = "1"
fst = "0.4.0"
regex-automata = "0.1.9"
ucd-parse = { version = "0.1.10", path = "ucd-parse", package = "yeslogic-ucd-parse" }
ucd-trie = { version = "0.1.3", path = "ucd-trie" }
ucd-util = { version = "0.1.8", path = "ucd-util"  }

[dependencies.clap]
version = "2.34.0"
default-features = false
features = ["suggestions"]

[dev-dependencies]
once_cell = "1"

[profile.release]
debug = true
