[package]
version = "0.1.10"  #:version
name = "yeslogic-ucd-parse"
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "YesLogic Pty. Ltd. <info@yeslogic.com>"
]
description = """
A library for parsing data files in the Unicode character database.
"""
documentation = "https://docs.rs/yeslogic-ucd-parse"
homepage = "https://github.com/yeslogic/ucd-generate"
repository = "https://github.com/yeslogic/ucd-generate"
readme = "README.md"
keywords = ["unicode", "database", "character", "property"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
once_cell = "1"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "unicode"]
